force-app/main/default/objects/ADM_Tag_Assignment__c/fields/Assignment_Rule__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment Rule</label>
    <referenceTo>ADM_Assignment_Rule__c</referenceTo>
    <relationshipLabel>Tag Assignments</relationshipLabel>
    <relationshipName>Tag_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>