force-app/main/default/objects/ADM_Tag_Assignment__c/fields/Product_Tag__c.field-meta.xml
<CustomField>
    <fullName>Product_Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Tag</label>
    <referenceTo>ADM_Product_Tag__c</referenceTo>
    <relationshipLabel>Tag Assignments</relationshipLabel>
    <relationshipName>Tag_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>