force-app/main/default/objects/ADM_Tag_Assignment__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>User Story</fullName>
            </value>
            <value>
                <fullName>Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>