force-app/main/default/objects/ADM_Tag_Assignment__c/fields/Tag_Record_Type_Key__c.field-meta.xml
<CustomField>
    <fullName>Tag_Record_Type_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Tag Record Type Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>